Corrected sticker Behaviour and set on click instead of on hower on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -311,13 +311,14 @@ html {
 }
 
 .sticker-1 {
-    top: 80px;
-    left: 50px;
+    top: -20px;
+    left: 20px;
     width: 150px;
     height: auto;
     max-width: 150px;
     animation-delay: 0s;
     transform-origin: center center;
+    z-index: 10;
 }
 
 .sticker-1 .flip-card-inner {
@@ -339,13 +340,14 @@ html {
 }
 
 .sticker-2 {
-    top: 60px;
-    right: 50px;
+    top: -30px;
+    right: 15px;
     width: 180px;
     height: auto;
     max-width: 180px;
     animation-delay: 0.5s;
     transform-origin: center center;
+    z-index: 10;
 }
 
 .sticker-2 .flip-card-inner {
@@ -368,12 +370,13 @@ html {
 
 .sticker-3 {
     top: 220px;
-    left: 30px;
+    left: -40px;
     width: 160px;
     height: auto;
     max-width: 160px;
     animation-delay: 1s;
     transform-origin: center center;
+    z-index: 10;
 }
 
 .sticker-3 .flip-card-inner {
@@ -396,12 +399,13 @@ html {
 
 .sticker-4 {
     top: 200px;
-    right: 40px;
+    right: -35px;
     width: 170px;
     height: auto;
     max-width: 170px;
     animation-delay: 1.5s;
     transform-origin: center center;
+    z-index: 10;
 }
 
 .sticker-4 .flip-card-inner {
